# ink-analyzer

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  tarpaulin.toml
.github/workflows/: ci.yaml  publish.yaml  release.yaml  test.yaml
crates/analyzer/: Cargo.toml  README.md
crates/analyzer/src/: analysis.rs  codegen.rs  lib.rs  resolution.rs  test_utils.rs  utils.rs
crates/analyzer/src/analysis/: actions.rs  completions.rs  diagnostics.rs  extract.rs  hover.rs  inlay_hints.rs  migrate.rs  signature_help.rs  snippets.rs  text_edit.rs  utils.rs
crates/analyzer/src/analysis/actions/: attr.rs  entity.rs  item.rs
crates/analyzer/src/analysis/diagnostics/: chain_extension.rs  common.rs  constructor.rs  contract.rs  contract_ref.rs  environment.rs  error.rs  event.rs  extension.rs  extension_fn.rs  file.rs  impl_item.rs  ink_e2e_test.rs  ink_impl.rs  ink_test.rs  message.rs  storage.rs  storage_item.rs  topic.rs  trait_definition.rs  utils.rs
crates/analyzer/src/analysis/diagnostics/chain_extension/: error_code.rs  extension_fn.rs
crates/analyzer/src/analysis/diagnostics/contract/: constructor.rs  ink_impl.rs  storage.rs
crates/analyzer/src/analysis/diagnostics/event/: topic.rs
crates/analyzer/src/analysis/hover/: args.rs  content.rs  macros.rs
crates/analyzer/src/analysis/hover/content/: args.rs  macros.rs
crates/analyzer/src/analysis/migrate/: common.rs  e2e_test.rs  host_fn.rs  traversal.rs
crates/analyzer/src/analysis/text_edit/: common.rs
crates/analyzer/src/codegen/: snippets.rs
crates/analyzer/tests/: actions.rs  chain_extension_tests.rs  completions.rs  contract_tests.rs  diagnostics.rs  hover.rs  inlay_hints.rs  signature_help.rs  storage_item_tests.rs  trait_definition_tests.rs
crates/analyzer/tests/chain_extensions/: psp22_extension.rs  rand_extension.rs
crates/analyzer/tests/contracts/: erc20.rs  flipper.rs  mother.rs
crates/analyzer/tests/diagnostics/: chain_extension.rs  contract.rs  main.rs  storage_item.rs  trait_definition.rs
crates/analyzer/tests/storage_items/: complex_non_packed_struct.rs  complex_packed_struct.rs  default_storage_key_1.rs  non_packed_tuple_struct.rs
crates/analyzer/tests/test_data/storage_items/: complex_non_packed_enum.rs
crates/analyzer/tests/trait_definitions/: erc20_trait.rs  flipper_trait.rs
crates/analyzer/tests/utils/: mod.rs
crates/ir/: Cargo.toml  README.md
crates/ir/src/: attrs.rs  chain_extension.rs  constructor.rs  contract.rs  contract_ref.rs  environment.rs  error.rs  event.rs  event_v2.rs  extension.rs  file.rs  function.rs  impl_item.rs  ink_e2e_test.rs  ink_impl.rs  ink_test.rs  iter.rs  lib.rs  macros.rs  message.rs  scale_derive.rs  selector.rs  storage.rs  storage_item.rs  test_utils.rs  topic.rs  trait_definition.rs  traits.rs  tree.rs  utils.rs
crates/ir/src/attrs/: arg.rs  args.rs  meta.rs  parser.rs  utils.rs
crates/ir/src/attrs/meta/: name.rs  option.rs  separator.rs  value.rs
crates/ir/src/traits/: ast.rs  ast_ext.rs  ast_type.rs  callable.rs  entity.rs  from.rs  shared.rs
crates/ir/src/tree/: ast_ext.rs  ink_tree.rs  item_at_offset.rs  utils.rs
crates/lsp-server/: CHANGELOG.md  Cargo.toml  README.md
crates/lsp-server/src/: capabilities.rs  dispatch.rs  initialize.rs  lib.rs  main.rs  memory.rs  test_utils.rs  translator.rs  utils.rs
crates/lsp-server/src/dispatch/: actions.rs  handlers.rs  routers.rs
crates/lsp-server/src/dispatch/handlers/: command.rs  notification.rs  request.rs
crates/lsp-server/src/dispatch/routers/: notification.rs  request.rs
crates/lsp-server/src/translator/: from_lsp.rs  to_lsp.rs
crates/lsp-server/tests/: actions.rs  commands.rs  completions.rs  create_project_command.rs  diagnostics.rs  hover.rs  inlay_hints.rs  signature_help.rs
crates/lsp-server/tests/utils/: mod.rs
crates/macro/: Cargo.toml  README.md
crates/macro/src/: entity.rs  error.rs  from_ast.rs  from_ink_attribute.rs  from_syntax.rs  lib.rs  utils.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: fixtures.rs  lib.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs
src/: analysis.rs  ir.rs  lib.rs
src/analysis/: diagnostics.rs  mod.rs
src/ir/: attrs.rs
src/ir/attrs/: mod.rs  utils.rs
test-fixtures/: README.md
test-fixtures/contracts/mother/: Cargo.toml  lib.rs
test-fixtures/storage_items/complex_non_packed_enum/: Cargo.toml  lib.rs
test-fixtures/storage_items/complex_non_packed_struct/: Cargo.toml  lib.rs
test-fixtures/storage_items/complex_packed_enum/: Cargo.toml  lib.rs
test-fixtures/storage_items/complex_packed_struct/: Cargo.toml  lib.rs
test-fixtures/storage_items/non_packed_tuple_struct/: Cargo.toml  lib.rs
test-fixtures/trait_definitions/trait_erc20/: lib.rs
test-fixtures/v4/erc20/: lib.rs
test-fixtures/v4/psp22-extension/: lib.rs
test-fixtures/v4/storage_items/complex_non_packed_enum/: lib.rs
test-fixtures/v4/storage_items/complex_non_packed_struct/: lib.rs
test-fixtures/v4/storage_items/default_storage_key_1/: Cargo.toml  lib.rs
test-fixtures/v4/storage_items/non_packed_tuple_struct/: lib.rs
test-fixtures/v4/workspace-contracts/flipper/: lib.rs
test-fixtures/v5/storage_items/complex_non_packed_struct/: Cargo.toml  lib.rs
test-fixtures/v5/storage_items/non_packed_tuple_struct/: Cargo.toml
test-fixtures/v5/workspace-contracts/flipper/: lib.rs
test_data/storage_items/: complex_packed_enum.rs
