[package]
name = "ink-analyzer"
version = "0.8.0"
edition = "2021"
description = "A library for semantic analysis of ink! smart contract code."
license = "MIT OR Apache-2.0"
authors = ["David Semakula <hello@davidsemakula.com>"]

readme = "README.md"
repository = "https://github.com/ink-analyzer/ink-analyzer"
homepage = "https://github.com/ink-analyzer/ink-analyzer"
keywords = ["ink", "smart-contract", "polkadot", "substrate", "blockchain"]
categories = ["development-tools"]

[dependencies]
ink-analyzer-ir = { version = "0.8", path = "../ir" }
itertools = "0.10.5"
once_cell = "1.18.0"
regex = "1.9.5"

[dev-dependencies]
prettyplease = { version = "0.2.12", features = ["verbatim"] }
quote = "1.0.26"
syn = "2.0.29"
test-utils = { path = "../test-utils" }
