[package]
name = "ink-analyzer"
version = "0.9.3"
edition = "2021"
description = "A library for semantic analysis of ink! smart contract code."
license = "MIT OR Apache-2.0"
authors = ["David Semakula <hello@davidsemakula.com>"]

readme = "README.md"
repository = "https://github.com/ink-analyzer/ink-analyzer"
homepage = "https://github.com/ink-analyzer/ink-analyzer"
keywords = ["ink", "smart-contract", "polkadot", "substrate", "blockchain"]
categories = ["development-tools"]

[dependencies]
ink-analyzer-ir = { version = "0.13", path = "../ir" }
itertools = "0.12.1"
once_cell = "1.19.0"
regex = "1.10.3"

[dev-dependencies]
prettyplease = { version = "0.2.16", features = ["verbatim"] }
quote = "1.0.35"
syn = "2.0.48"
test-utils = { path = "../test-utils" }
