[package]
name = "ink-analyzer"
version = "0.11.1"
edition = "2021"
description = "A library for semantic analysis of ink! smart contracts."
license = "MIT OR Apache-2.0"
authors = ["David Semakula <hello@davidsemakula.com>"]

readme = "README.md"
repository = "https://github.com/ink-analyzer/ink-analyzer"
homepage = "https://github.com/ink-analyzer/ink-analyzer"
keywords = ["ink", "smart-contract", "polkadot", "substrate", "blockchain"]
categories = ["development-tools"]

[dependencies]
ink-analyzer-ir = { version = "0.16", path = "../ir" }
itertools = "0.14.0"
once_cell = "1.21.0"
regex = "1.11.1"

[dev-dependencies]
prettyplease = { version = "0.2.30", features = ["verbatim"] }
quote = "1.0.40"
syn = "2.0.100"
test-utils = { path = "../test-utils" }
