[package]
name = "ink-analyzer-ir"
version = "0.15.0"
edition = "2021"
description = "Intermediate representations (IRs) and abstractions of ink! smart contract code for ink! analyzer."
license = "MIT OR Apache-2.0"
authors = ["David Semakula <hello@davidsemakula.com>"]

readme = "README.md"
repository = "https://github.com/ink-analyzer/ink-analyzer"
homepage = "https://github.com/ink-analyzer/ink-analyzer"
keywords = ["ink", "smart-contract", "polkadot", "substrate", "blockchain"]
categories = ["development-tools"]

[dependencies]
blake2 = "0.10.6"
impl-serde = { version = "0.4.0", default-features = false }
ink-analyzer-macro = { version = "0.7", path = "../macro" }
itertools = "0.12.1"
ra_ap_syntax = "0.0.269"

[dev-dependencies]
quote = "1.0.35"
test-utils = { path = "../test-utils" }
