[package]
name = "ink-lsp-server"
version = "0.2.24"
edition = "2021"
description = "A Language Server Protocol (LSP) implementation for the ink! smart contract programming language."
license = "MIT OR Apache-2.0"
authors = ["David Semakula <hello@davidsemakula.com>"]

readme = "README.md"
repository = "https://github.com/ink-analyzer/ink-analyzer"
homepage = "https://github.com/ink-analyzer/ink-analyzer"
keywords = ["ink", "smart-contract", "polkadot", "blockchain", "lsp"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.3.24", features = ["derive"] }
crossbeam-channel = "0.5.11"
ink-analyzer = { version = "0.8", path = "../analyzer" }
line-index = "0.1.1"
lsp-server = "0.7.6"
lsp-types = { version = "0.95.0", features = ["proposed"] }
serde = "1.0.196"
serde_json = "1.0.113"

[dev-dependencies]
quote = "1.0.35"
test-utils = { path = "../test-utils" }
