[package]
name = "ink-lsp-server"
version = "0.3.1"
edition = "2021"
description = "A Language Server Protocol (LSP) implementation for the ink! smart contract programming language."
license = "MIT OR Apache-2.0"
authors = ["David Semakula <hello@davidsemakula.com>"]

readme = "README.md"
repository = "https://github.com/ink-analyzer/ink-analyzer"
homepage = "https://github.com/ink-analyzer/ink-analyzer"
keywords = ["ink", "smart-contract", "polkadot", "blockchain", "lsp"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
crossbeam-channel = "0.5.14"
ink-analyzer = { version = "0.10", path = "../analyzer" }
line-index = "0.1.2"
lsp-server = "0.7.8"
lsp-types = { version = "0.97.0", features = ["proposed"] }
once_cell = "1.21.0"
serde = "1.0.219"
serde_json = "1.0.140"
regex = "1.11.1"
toml = "0.8.20"
toml_edit = "0.22.24"
url = "2.5.4"

[dev-dependencies]
quote = "1.0.40"
test-utils = { path = "../test-utils" }
