[package]
name = "ink-analyzer-macro"
version = "0.5.0"
edition = "2021"
description = "Procedural macros for ink! analyzer."
license = "MIT OR Apache-2.0"
authors = ["David Semakula <hello@davidsemakula.com>"]

readme = "README.md"
repository = "https://github.com/ink-analyzer/ink-analyzer"
homepage = "https://github.com/ink-analyzer/ink-analyzer"
keywords = ["ink", "smart-contract", "polkadot", "substrate", "blockchain"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["parsing", "full", "extra-traits"] }

[dev-dependencies]
ink-analyzer-ir = { version = "0.5", path = "../ir" }
