[package]
name = "ink-analyzer-macro"
version = "0.7.3"
edition = "2021"
description = "Procedural macros for ink! analyzer."
license = "MIT OR Apache-2.0"
authors = ["David Semakula <hello@davidsemakula.com>"]

readme = "README.md"
repository = "https://github.com/ink-analyzer/ink-analyzer"
homepage = "https://github.com/ink-analyzer/ink-analyzer"
keywords = ["ink", "smart-contract", "polkadot", "substrate", "blockchain"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["parsing", "full", "extra-traits"] }

[dev-dependencies]
ink-analyzer-ir = { path = "../ir" }
